<resources>
    <string name="app_name">ExperimentTwo</string>
    <string name="title_name">中山大学学生信息系统</string>
    <string name="user_name">学号：</string>
    <string name="password">密码：</string>
    <string name="user_hint">请输入学号</string>
    <string name="password_hint">请输入密码</string>
    <string name="radio1">学生</string>
    <string name="radio2">教职工</string>
    <string name="sysu">sysu</string>
    <string name="login">登陆</string>
    <string name="signup">注册</string>

        <item name="visible" type="id"/>
        <item name="masked" type="id"/>

</resources>
