<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xxt.projrct1.MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:src="@drawable/sysu"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/imageView"
        android:contentDescription="@string/sysu"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:onClick="im_build_dialog"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editText2"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        >
        <EditText
            android:id="@+id/user_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:hint="@string/user_hint"
            android:inputType="number"
            android:ems="15"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editText"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        >
        <EditText
            android:id="@+id/user_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:ems="15"
            />
    </android.support.design.widget.TextInputLayout>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:id="@+id/radioGroup"
        android:checkedButton="@id/default_activity_button"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/default_activity_button"
            android:text="@string/radio1"
            android:onClick="check_s"/>
        <!--android:checked="true"-->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:onClick="check_t"/>

    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/button"
        android:text="@string/login"
        android:textSize="18sp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/button_shape"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="-253dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="-200dp"
        android:onClick="login"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/button2"
        android:text="@string/signup"
        android:textSize="18sp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/button_shape"
        android:textColor="#FFFFFF"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:onClick="signup"/>

</android.support.constraint.ConstraintLayout>
